# fast_react

./: .env  .env.example  docker-compose.yml
back/: .gitignore  Dockerfile  README.md  pyproject.toml  sql_app.db
back/.cursor/rules/: database-rules.mdc  mcp-tool-usage.mdc  uv-pm.mdc
back/app/: database.py  main.py
back/app/crud/: events.py  item.py
back/app/models/: event.py  events.py  item.py
back/app/routes/: __init__.py  health.py  items.py  main.py
back/app/schemas/: event.py  item.py
front/: Dockerfile  openapi.json  package.json  pnpm-lock.yaml
front/src/app/: layout.tsx  page.tsx
front/src/app/calendar/: page.tsx
front/src/components/: EventModal.tsx  LoadingSpinner.tsx
front/src/components/Calendar/: CalendarEvent.tsx  CalendarGrid.tsx  CreateEventModal.tsx
front/src/lib/: api.ts
front/src/store/: events.ts
front/staff/: openapi.json
