[project]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI application"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.109.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
] 
lint = [
    "ruff>=0.11.0",
]
